# sim_llm

./: .gitignore  README.md  README_.md  README__.md  requirements.txt  rsync_with_board.sh  show_env.sh
assets/: rosgraph.dot
docs/: multiple_mechine.md  riscv.md
src/llm_robot/: CMakeLists.txt  package.xml  setup.py
src/llm_robot/launch/: llm_robot.launch  llm_robot.launch.py  sim_world.launch  test.launch.py
src/llm_robot/llm_robot/: camera.py  llm_nlp.py  llm_robot.py  llm_turtle.py  test.py  test_requests.py
src/llm_robot/roboflow/: README.dataset.txt  README.roboflow.txt  data.yaml
src/llm_robot/rviz/: llm_robot.rviz
src/llm_robot/scripts/: camera.py  highlight_log.py  llm_nlp.py  llm_robot.py  llm_run.py  test.py
src/llm_robot/srv/: Command.srv
src/llm_robot/urdf/: car_base.urdf
src/my_interfaces/: CMakeLists.txt  package.xml
src/navigation_sim_demo/param/: local_costmap_params_withcam.yaml
src/navigation_sim_demo/rviz/: navigation.rviz
src/nlp_llm/: package.xml  setup.cfg  setup.py
src/nlp_llm/nlp_llm/: nlp_llm.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: qpbot_slam_2d.lua
src/robot_description/launch/: cartographer.launch.py  qpbot.launch.py  robot_spawn.launch.py  xbot-u.launch.py
src/robot_description/rviz2/: cartographer.rviz  qpbot.rviz
src/robot_description/urdf/: qpbot.urdf  qpbot.xacro  qpbot_base.xacro  qpbot_components.xacro  robot.xacro  (+4 more)
src/robot_navigation2/: CMakeLists.txt  package.xml
src/robot_sim_demo/: package.xml
tools/: rsync_with_board.sh  set_env.sh
(+10 files in other folders)
